preserve Host header

--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -55,6 +55,7 @@
     DocumentRoot "/usr/local/apache2/htdocs/demo.zmon.io"
 
     ProxyPass / http://zmon-controller:8080/
+    ProxyPreserveHost On
 
     <IfDefine SSL>
         Header add Strict-Transport-Security "max-age=15768000;includeSubDomains"
