--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -11,6 +11,7 @@
 
     # TODO: temporarily use the GitHub pages
     ProxyPass / https://zalando.github.io/zmon/
+    SSLProxyEngine On
 
     <IfDefine SSL>
         Header add Strict-Transport-Security "max-age=15768000;includeSubDomains"
