--- a/bootstrap/alert-definitions/random.yaml
+++ b/bootstrap/alert-definitions/random.yaml
@@ -1,18 +1,18 @@
-check_definition_id: 1
-name: Website too slow
+check_definition_id: 4
+name: Random Example Alert
 team: ZMON
 responsible_team: ZMON
 description: |-
-  test
+  Triggers alert if random value is larger than 10.
 condition: |-
-  >1
+  >10
 entities: []
 entities_exclude: []
 status: ACTIVE
 last_modified_by: hjacobs
-last_modified: 1454160835787
+last_modified: 1454166442716
 notifications: []
 period: ''
-priority: 2
+priority: 1
 template: false
 
