fix Header directive and file format

--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -14,7 +14,7 @@
     SSLProxyEngine On
 
     <IfDefine SSL>
-        Header add Strict-Transport-Security "max-age=15768000;includeSubDomains"
+        Header set Strict-Transport-Security "max-age=15768000;includeSubDomains"
 
         SSLEngine On
         SSLCertificateFile /etc/letsencrypt/live/zmon.io/cert.pem
@@ -38,7 +38,7 @@
     RequestHeader set X-Forwarded-Proto "https"
 
     <IfDefine SSL>
-        Header add Strict-Transport-Security "max-age=15768000;includeSubDomains"
+        Header set Strict-Transport-Security "max-age=15768000;includeSubDomains"
 
         SSLEngine On
         SSLCertificateFile /etc/letsencrypt/live/zmon.io/cert.pem
@@ -46,6 +46,3 @@
         SSLCertificateChainFile /etc/letsencrypt/live/zmon.io/chain.pem
     </IfDefine>
 </VirtualHost>
-
-
-
