--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -46,3 +46,26 @@
         SSLCertificateChainFile /etc/letsencrypt/live/zmon.io/chain.pem
     </IfDefine>
 </VirtualHost>
+
+<VirtualHost *:80>
+    ServerName docs.zmon.io
+    Redirect permanent / https://docs.zmon.io/
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin tech-stups-pr@zalando.de
+    ServerName docs.zmon.io
+    DocumentRoot "/usr/local/apache2/htdocs/docs.zmon.io"
+
+    ProxyPass / http://zmon.readthedocs.org
+    ProxyPreserveHost On
+
+    <IfDefine SSL>
+        Header set Strict-Transport-Security "max-age=15768000;includeSubDomains"
+
+        SSLEngine On
+        SSLCertificateFile /etc/letsencrypt/live/zmon.io/cert.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/zmon.io/privkey.pem
+        SSLCertificateChainFile /etc/letsencrypt/live/zmon.io/chain.pem
+    </IfDefine>
+</VirtualHost>
