--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -57,7 +57,7 @@
     ServerName docs.zmon.io
     DocumentRoot "/usr/local/apache2/htdocs/docs.zmon.io"
 
-    ProxyPass / http://zmon.readthedocs.org
+    ProxyPass / http://zmon.readthedocs.org/
     ProxyPreserveHost On
 
     <IfDefine SSL>
