Fix typo in infrastructure id

--- a/bootstrap/entities/demo-cloud.yaml
+++ b/bootstrap/entities/demo-cloud.yaml
@@ -8,28 +8,28 @@
 - id: a-zmon-controller[dc:1]
   application_id: zmon-controller
   type: application
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
 
 - id: a-zmon-metric-cache[dc:1]
   application_id: zmon-metric-cache
   type: application
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
 
 - id: a-zmon-eventlog-service[dc:1]
   application_id: zmon-eventlog-service
   type: application
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
 
 - id: a-zmon-scheduler[dc:1]
   application_id: zmon-scheduler
   type: application
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
 
 
 # INSTANCES
 - id: zmon-scheduler-localhost[dc:1]
   type: instance
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
   application_id: zmon-scheduler
   host: localhost
   ports:
@@ -37,7 +37,7 @@
 
 - id: zmon-metric-cache-localhost[dc:1]
   type: instance
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
   application_id: zmon-metric-cache
   host: localhost
   ports:
@@ -45,7 +45,7 @@
 
 - id: zmon-controller-localhost[dc:1]
   type: instance
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
   application_id: zmon-controller
   host: localhost
   ports:
@@ -54,7 +54,7 @@
 
 - id: zmon-eventlog-service-localhost[dc:1]
   type: instance
-  infrastrucure_account: dc:1
+  infrastructure_account: dc:1
   application_id: zmon-eventlog-service
   host: localhost
   ports:
